RESOLVED FIXED227847
:link and :visited pseudo-class selectors should not match <link> elements
https://bugs.webkit.org/show_bug.cgi?id=227847
Summary :link and :visited pseudo-class selectors should not match <link> elements
Chris Dumez
Reported 2021-07-09 16:58:06 PDT
:link and :visited pseudo-class selectors should not match <link> elements, only <a> and <area> elements. This is causing some subtests to fail in WebKit on: - http://wpt.live/dom/nodes/ParentNode-querySelector-All.html Those subtests are passing in both Blink and Gecko.
Attachments
Patch (6.78 KB, patch)
2021-07-09 17:02 PDT, Chris Dumez
no flags
Patch (17.89 KB, patch)
2021-07-09 19:52 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-07-09 17:02:20 PDT
Chris Dumez
Comment 2 2021-07-09 19:52:45 PDT
EWS
Comment 3 2021-07-11 21:08:53 PDT
Committed r279818 (239579@main): <https://commits.webkit.org/239579@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433253 [details].
Radar WebKit Bug Importer
Comment 4 2021-07-11 21:09:22 PDT
Ryosuke Niwa
Comment 5 2022-08-19 15:02:09 PDT
*** Bug 220740 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.