:link and :visited pseudo-class selectors should not match <link> elements https://bugs.webkit.org/show_bug.cgi?id=227847

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/dom/nodes/ParentNode-querySelector-All-expected.txt:
* web-platform-tests/dom/nodes/ParentNode-querySelector-All-xht-expected.txt:
* web-platform-tests/html/semantics/selectors/pseudo-classes/link-expected.txt:

Source/WebCore:

:link, :visited and :any-link should only match <a> and <area> elements as per:
- https://drafts.csswg.org/selectors/#the-any-link-pseudo

Blink and Gecko match the specification. However, WebKit was incorrectly matching
<link> elements too.

No new tests, rebaselined existing tests.

* html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::parseAttribute):

LayoutTests:

Update / Rebaseline existing tests due to behavior change.

* fast/css/link-basics-expected.html:
* fast/css/link-basics.html:
* fast/selectors/any-link-basics-expected.txt:
* fast/selectors/link-basics-expected.txt:
* fast/selectors/link-basics-xhtml-expected.txt:
* fast/selectors/resources/html-link-type-tests.js:
(testHTMLTagsForLink):
* fast/selectors/webkit-any-link-basics-expected.txt:


Canonical link: https://commits.webkit.org/239579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279818 268f45cc-cd09-0410-ab3c-d52691b4dbfc